--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -11,15 +11,11 @@
     display: flex;
     flex-direction: column;
     gap: 3em;
-    padding: 0;
     width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-    margin-bottom: 5em;
+    margin: 0 auto 5em;
     max-width: 28.75em;
     @include mq(desktop) {
+        padding: 0 0.93em;
         max-width: none;
     }
 
